# buildroot-task

./: .gitattributes  .gitignore  BUILDROOT_UPDATE_NOTES.txt  CMakeLists.txt  HowToTest.txt  HowToTestAPP.txt  PACKAGE_UPDATE_INFO.txt  README.service  RequiredPackages.txt  SDL_TEST_GUIDE.txt  SSH_KEY_SETUP.txt  app.cfg.json  app.cpp  app.h  app_cfg.cpp  br-task.code-workspace  logger.h  main.cpp  post-build.sh  print.h  redis_conn.cpp  redis_conn.h  redis_console.py  sdl.h  sdl_ctx.cpp  sdl_ctx.h  sdl_ctx_auto.cpp  sdl_ctx_display.cpp  sdl_ctx_draw.cpp  setup_console.sh
buildroot-package/: README.txt
buildroot-package/redis-image-viewer/: Config.in  redis-image-viewer.mk  redis-image-viewer.service
sdcard.img/: bcm2708-rpi-zero-w.dtb  bcm2708-rpi-zero.dtb  boot.vfat  genimage.cfg  rootfs.ext2  rootfs.tar  sdcard.img  zImage
sdcard.img.rpi0/: rootfs.ext2  sdcard.img  versatile-pb.dtb  zImage
sdcard.img.rpi5/: README  sdcard.img
sdcard.img/rpi-firmware/: config.txt
sdcard.img/rpi-firmware/overlays/: act-led.dtbo  adafruit-st7735r.dtbo  adafruit18.dtbo  adau1977-adc.dtbo  adau7002-simple.dtbo  ads1015.dtbo  ads1115.dtbo  ads7846.dtbo  adv7282m.dtbo  adv728x-m.dtbo  akkordion-iqdacplus.dtbo  allo-boss-dac-pcm512x-audio.dtbo  allo-boss2-dac-audio.dtbo  allo-digione.dtbo  allo-katana-dac-audio.dtbo  allo-piano-dac-pcm512x-audio.dtbo  allo-piano-dac-plus-pcm512x-audio.dtbo  anyspi.dtbo  apds9960.dtbo  applepi-dac.dtbo  arducam-64mp.dtbo  arducam-pivariety.dtbo  at86rf233.dtbo  audioinjector-addons.dtbo  audioinjector-bare-i2s.dtbo  audioinjector-isolated-soundcard.dtbo  audioinjector-ultra.dtbo  audioinjector-wm8731-audio.dtbo  audiosense-pi.dtbo  audremap-pi5.dtbo  audremap.dtbo  balena-fin.dtbo  bcm2712d0.dtbo  camera-mux-2port.dtbo  camera-mux-4port.dtbo  cap1106.dtbo  chipcap2.dtbo  chipdip-dac.dtbo  cirrus-wm5102.dtbo  cm-swap-i2c0.dtbo  (+312 more)
tests/: fbdraw.cpp  fbtest2.cpp  gldraw.cpp
